signup label issue on iphone

--- a/css/main.css
+++ b/css/main.css
@@ -840,7 +840,7 @@ input[type="submit"].footer_button {
     top: 1px;
     margin-bottom: 0;
     border: 1px solid #4ebbeb;
-    width: 63px;
+    width: 70px;
 }
 
 .login_tabs a { /*LOGIN TAB STYLING HERE*/
